crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-dataset-hybrid_multiple_column_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.56",
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": "0.51",
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "There are 22 female students and 18 male students in a classroom. Find the total number \\( t \\) of students."
        ]
      },
      "primary_key": {
        "id": 787
      }
    },
    {
      "_score": "0.49",
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "How many numbers between 0 and 60 are even multiples of 5?"
        ]
      },
      "primary_key": {
        "id": 470
      }
    },
    {
      "_score": "0.45",
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
